Исправляет закрытие тега ul

--- a/index.html
+++ b/index.html
@@ -17,28 +17,38 @@
     <header>
       <nav>
         <!--Logo-->
-        <a  href="./index.html"  class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
 
         <!--Menu-->
         <ul class="site-nav list">
-          <li><a href="./index.html"  class="link">Студия</a></li>
-          <li><a href=""  class="link">Портфолио</a></li>
-          <li><a href=""  class="link">Контакты</a></li>
-
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
+        </ul>
       </nav>
 
       <!--Contacts-->
       <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com"  class="contacts-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111"  class="contacts-link">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
     <main>
       <!--Hero-->
       <section class="hero">
-        <h1   class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button  class="hero-button pointer"  type="button">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button pointer" type="button">
+          Заказать услугу
+        </button>
       </section>
 
       <!--Our benefits-->
@@ -142,7 +152,9 @@
       <!--Contacts-->
       <address class="contacts">
         <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com" class="lower-contact">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="lower-contact"
+          >info@devstudio.com</a
+        >
         <a href="tel:+380961111111" class="lower-contact">+38 096 111 11 11</a>
       </address>
     </footer>
