--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </section>
 
       <!--Our team-->
-      <section class="section">
+      <section class="section team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li>
@@ -145,7 +145,7 @@
       </section>
     </main>
     <!--Футер-->
-    <footer>
+    <footer class="bottom-contacts">
       <!--Logo-->
       <a class="logo second" href="./index.html"><span>Web</span>Studio</a>
 
