--- a/portfolio.html
+++ b/portfolio.html
@@ -9,74 +9,85 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Хедер-->
-    <header>
-      <nav>
-        <!--Logo-->
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+    <!-- Header -->
+    <header class="header-section">
+      <div class="container">
+        <nav>
+          <!--Logo-->
+          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
 
-        <!--Menu-->
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <!--Menu-->
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <!--Contacts-->
+        <ul class="contacts list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="contacts-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-
-      <!--Contacts-->
-      <ul class="contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts-link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <h1 class="section-title">Примеры работ</h1>
         <!-- Filter -->
-        <ul class="filter list">
-          <li>
-            <button type="button" class="filter-button pointer">Все</button>
-          </li>
-          <li>
-            <button type="button" class="filter-button pointer">
-              Веб-сайты
-            </button>
-          </li>
-          <li>
-            <button type="button" class="filter-button pointer">
-              Приложения
-            </button>
-          </li>
-          <li>
-            <button type="button" class="filter-button pointer">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="filter-button pointer">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="filter list">
+            <li>
+              <button type="button" class="filter button pointer">Все</button>
+            </li>
+            <li>
+              <button type="button" class="filter button pointer">
+                Веб-сайты
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter button pointer">
+                Приложения
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter button pointer">
+                Дизайн
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter button pointer">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+        </div>
 
         <!-- Gallery -->
         <ul class="gallery list">
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-1.jpg"
+                src="./images/portfolio/img3-1.jpg"
                 alt="Открытая интернет-страница на экране ноутбука"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Технокряк</h2>
               <p class="card-text">Веб-сайт</p>
@@ -86,9 +97,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-2.jpg"
+                src="./images/portfolio/img3-2.jpg"
                 alt="Два баскетболиста сражаются за мяч"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
               <p class="card-text">Дизайн</p>
@@ -98,9 +110,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-3.jpg"
+                src="./images/portfolio/img3-3.jpg"
                 alt="Логотип ресторана морепродуктов"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Ресторан Seafood</h2>
               <p class="card-text">Приложение</p>
@@ -110,9 +123,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-4.jpg"
+                src="./images/portfolio/img3-4.jpg"
                 alt="Беспроводные наушники"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Проект Prime</h2>
               <p class="card-text">Маркетинг</p>
@@ -122,9 +136,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-5.jpg"
+                src="./images/portfolio/img3-5.jpg"
                 alt="Две фирменные коробки для упаковки товара"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Проект Boxes</h2>
               <p class="card-text">Приложение</p>
@@ -134,9 +149,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-6.jpg"
+                src="./images/portfolio/img3-6.jpg"
                 alt="Монитор компьютера"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Inspiration has no Borders</h2>
               <p class="card-text">Веб-сайт</p>
@@ -146,9 +162,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-7.jpg"
+                src="./images/portfolio/img3-7.jpg"
                 alt="Открытая книга с иллюстрациями"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Издание Limited Edition</h2>
               <p class="card-text">Дизайн</p>
@@ -158,9 +175,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-8.jpg"
+                src="./images/portfolio/img3-8.jpg"
                 alt="Товарная бирка от магазина"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Проект LAB</h2>
               <p class="card-text">Маркетинг</p>
@@ -170,9 +188,10 @@
           <li class="card">
             <a href="" class="card-link">
               <img
-                src="./images/img3-9.jpg"
+                src="./images/portfolio/img3-9.jpg"
                 alt="Мужчина работает за ноутбуком"
                 width="370"
+                height="294"
               />
               <h2 class="card-title">Growing Business</h2>
               <p class="card-text">Приложение</p>
