--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav>
           <!--Logo-->
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <a lang="" href="./index.html" class="logo"><span>Web</span>Studio</a>
 
           <!--Menu-->
           <ul class="site-nav list">
