Добавляет флексбокс, правильные марджины и паддинги на страницу

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav>
           <!--Logo-->
-          <a lang="" href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <a lang="en" href="./index.html" class="logo"><span>Web</span>Studio</a>
 
           <!--Menu-->
           <ul class="site-nav list">
@@ -140,7 +140,7 @@
                 height="260"
               />
               <h3 class="member">Игорь Демьяненко</h3>
-              <p class="specialization">Product Designer</p>
+              <p lang="en" class="specialization">Product Designer</p>
             </li>
 
             <li>
@@ -151,7 +151,7 @@
                 height="260"
               />
               <h3 class="member">Ольга Репина</h3>
-              <p class="specialization">Frontend Developer</p>
+              <p lang="en" class="specialization">Frontend Developer</p>
             </li>
 
             <li>
@@ -162,7 +162,7 @@
                 height="260"
               />
               <h3 class="member">Николай Тарасов</h3>
-              <p class="specialization">Marketing</p>
+              <p  lang="en" class="specialization">Marketing</p>
             </li>
 
             <li>
@@ -173,7 +173,7 @@
                 height="260"
               />
               <h3 class="member">Михаил Ермаков</h3>
-              <p class="specialization">UI Designer</p>
+              <p lang="en" class="specialization">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -182,7 +182,7 @@
     <!--Футер-->
     <footer class="bottom-contacts">
       <!--Logo-->
-      <a class="logo second" href="./index.html"><span>Web</span>Studio</a>
+      <a lang="en" class="logo second" href="./index.html"><span>Web</span>Studio</a>
 
       <!--Contacts-->
       <address class="contacts">
