--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <div class="container">
         <nav>
           <!--Logo-->
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <a lang="en" href="./index.html" class="logo"><span>Web</span>Studio</a>
 
           <!--Menu-->
           <ul class="site-nav list">
@@ -102,7 +102,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+              <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p class="card-text">Дизайн</p>
             </a>
           </li>
@@ -115,7 +115,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Ресторан Seafood</h2>
+              <h2 class="card-title">Ресторан <span lang="en">Seafood</span>  
+              </h2>
               <p class="card-text">Приложение</p>
             </a>
           </li>
@@ -128,7 +129,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Проект Prime</h2>
+              <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
               <p class="card-text">Маркетинг</p>
             </a>
           </li>
@@ -141,7 +142,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Проект Boxes</h2>
+              <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
               <p class="card-text">Приложение</p>
             </a>
           </li>
@@ -154,7 +155,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Inspiration has no Borders</h2>
+              <h2 class="card-title" lang="en">Inspiration has no Borders</h2>
               <p class="card-text">Веб-сайт</p>
             </a>
           </li>
@@ -167,7 +168,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Издание Limited Edition</h2>
+              <h2 class="card-title">Издание <span lang="en">Limited Edition</span></h2>
               <p class="card-text">Дизайн</p>
             </a>
           </li>
@@ -180,7 +181,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Проект LAB</h2>
+              <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
               <p class="card-text">Маркетинг</p>
             </a>
           </li>
@@ -193,7 +194,7 @@
                 width="370"
                 height="294"
               />
-              <h2 class="card-title">Growing Business</h2>
+              <h2 class="card-title" lang="en">Growing Business</h2>
               <p class="card-text">Приложение</p>
             </a>
           </li>
@@ -203,7 +204,7 @@
     <!--Футер-->
     <footer class="bottom-contacts">
       <!--Logo-->
-      <a class="logo second" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo second" href="./index.html" lang="en"><span>Web</span>Studio</a>
 
       <!--Contacts-->
       <address class="contacts">
